test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-10-02 21:00:02.162096

